[package]
name = "cutlie"
version = "0.1.0"
edition = "2021"
description = "Cutlie is a short cut tool for you."
license = "MIT"
repository = "https://github.com/kamilutkumavi0/cutlie" 
categories = ["command-line-utilities"]
keywords = ["cli", "shortcut"]


[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
dialoguer = "0.11.0"
serde = { version = "1.0.217", features = ["derive"] }
strsim = "0.11.1"
toml = { version = "0.8.20" }
